cluster/apps/traefik/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-real-ip
  namespace: kube-system
spec:
  plugin:
    traefik-real-ip:
      excludednets:
        - "10.42.0.1/24"
